--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <title>９章演習</title>
+    <title>課題１</title>
   </head>
 
   <body>
